crash report solved